[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/EasterEgg2.png" type="Texture" id=1]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://EasterEggs.gd" type="Script" id=3]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00392157, 0, 0.439216, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -56.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 896.0
margin_top = 192.0
margin_bottom = -216.0
theme = ExtResource( 2 )
text = ">"

[node name="Left" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 192.0
margin_right = -896.0
margin_bottom = -216.0
theme = ExtResource( 2 )
text = "<"

[node name="Button" type="Button" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 240.0
margin_top = 544.0
margin_right = -240.0
theme = ExtResource( 2 )
text = "Support The Artist (web link)"
[connection signal="pressed" from="Control/Right" to="." method="_on_Right_pressed"]
[connection signal="pressed" from="Control/Left" to="." method="_on_Left_pressed"]
[connection signal="pressed" from="Control/Button" to="." method="_on_Button_pressed"]
